# clinic-desk

./: .env  .gitignore  Cargo.toml  README.MD
migrations/2023-12-02-205738_create_users/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
src/database/: db.rs  models.rs
src/gui/: app.rs  mod.rs  widgets.rs
src/gui/controllers/: login_controller.rs  mod.rs
src/gui/pages/: dashboard.rs  dashboard_page.rs  login.rs  login_page.rs  mod.rs
src/gui/types/: clinic_desk.rs  message.rs  mod.rs  status.rs
