[package]
name = "clinic-desk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.10.0", features = ["image", "debug"] }
diesel = { version = "2.1.0", features = ["mysql"] }
dotenvy = "0.15"
dotenv = "0.15.0"
